Removed the extraction button and made it to extract the links autometically

--- a/popup.html
+++ b/popup.html
@@ -12,12 +12,8 @@
     <hr>
   </div>
   <div id="urlsContainer">
-    <p>Click the button to extract the YouTube URL.</p> 
+    <p>Extracting YouTube URLs...</p> 
   </div>
-  <div class="btnContainer">
-    <button id="extractBtn">Extract YouTube URL</button>
-  </div>
-  
   <script type="module" src="js/popup.js"></script>
 </body>
 </html>
